--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    npm  install
+    npm  run init
     npm run build
   displayName: 'npm install and build'
